--- a/blog-pages/blog1.html
+++ b/blog-pages/blog1.html
@@ -34,7 +34,7 @@
       <div class="header-text">
         <h2>Mastering spelling with expert tips </h2>
         <p>
-          Unlock Your Full Potential with Proven Strategies to enhance your Spelling Skills
+          Unlock Your Full Potential with Proven Strategies to enhance your Spelling Skills!
         </p>
         <h4>WORDWIZ TEAM 8/10/2024</h4>
       </div>
